# openxlpractice

./: .gitignore  exifCheck.py  generate.py  pyproject.toml
